updated google maps, contact address

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <div class="container">
             <div class="row">
 
-                <div class="col" data-aos="fade-right">
+                <div class="col-md" data-aos="fade-right">
 
                     <div class="contact-title">
                         <img src="./assets/images/contact/logo_3_new.png" width="60%" height="auto" />
@@ -226,7 +226,7 @@
                                 frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
                             </iframe> -->
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1790.5326894092498!2d136.87821449131977!3d35.177376035875014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x600376ebcc0cb987%3A0xb587e34b4720cc1!2zSmFwYW4sIOOAkjQ1MS0wMDQ1IEFpY2hpLCBOYWdveWEsIE5pc2hpIFdhcmQsIE1laWVraSwgMi1jaMWNbWXiiJIxOOKIkjUg5pel5LiL44OT44Or!5e0!3m2!1sen!2sph!4v1586778185541!5m2!1sen!2sph" 
-                            width="600" height="500" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
+                            id="gmap_canvas" width="600" height="500" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
                             </iframe>
                         </div>
                         <style>
@@ -250,7 +250,7 @@
 
                 </div>
 
-                <div class="col" data-aos="fade-left">
+                <div class="col-md" data-aos="fade-left">
                     <div class="form-title">
                         Get in touch
                     </div>
@@ -275,7 +275,7 @@
 
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group text-center">
                             <button class="btn" type="submit">Send</button>
                         </div>
                 </div>
