--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 
 
 </head>
-
 <body>
     <section>
         <nav class="navbar navbar-expand-lg fixed-top bg-white navbar-light py-2" data-aos="fade-down">
@@ -46,10 +45,10 @@
                             <a class="nav-link px-3" href="#vision">Vision</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-3" href="#about">About</a>
+                            <a class="nav-link px-3" href="#our-works">Our Works</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-3" href="#works">Our Works</a>
+                            <a class="nav-link px-3" href="#about">Profile</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link px-3" href="#contact">Contact</a>
@@ -105,6 +104,29 @@
     <!-- vision starts here -->
     <section class="vision" id="vision">
         <div class="row p-0 m-0">
+            <div class="col-md about_column">
+                <img src="assets/images/vision/vision_img1.jpg" alt="" class="img-fluid about_img1_column"
+                    data-aos="flip-right" data-aos-duration="2000">
+            </div>
+            <div class="col-md">
+                <div class="container vision_card">
+                    <div class="vision_heading" data-aos="fade-up">Our Vision</div>
+                    <p data-aos="fade-up" data-aos-duration="2500">弊社の絶対ルールは「ワクワク楽しむ」こと。
+                        ネガティブな感情からは良いアイデアは生まれません。
+                        だから仕事も遊びも徹底的に楽しみます。
+                        そして従業員、従業員の家族、クライアント
+                        「関わる人が全員幸せになる」そんな会社を目指しています。</p>
+                </div>
+            </div>
+            <div class="col col-md-7 about_column2">
+                <img src="assets/images/vision/vision_img1.jpg" alt="" class="img-fluid about_img1" data-aos="flip-right"
+                    data-aos-duration="2000">
+            </div>
+        </div>
+    </section>
+
+    <!-- <section class="vision" id="vision">
+        <div class="row p-0 m-0">
             <div class="col col-md-7">
                 <img class="vision_img1 img-fluid" src="assets/images/vision/vision_img1.jpg" alt=""
                     data-aos="flip-left" data-aos-duration="2000">
@@ -119,47 +141,16 @@
                         「関わる人が全員幸せになる」そんな会社を目指しています。</p>
                 </div>
             </div>
+            
             <div class="col col-md-1 vision_column3 p-0">
                 <img src="assets/images/vision/vision_img2.jpg" alt="" class="float-right" data-aos="fade-up"
                     data-aos-duration="4000">
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- vision ends here -->
-    <!-- about starts here -->
-    <section class="about" id="about">
-        <div class="row p-0 m-0">
-            <div class="col-md about_column">
-                <img src="assets/images/about/about_img1.jpg" alt="" class="img-fluid about_img1_column"
-                    data-aos="flip-right" data-aos-duration="2000">
-            </div>
-            <div class="col-md">
-                <div class="about_card container">
-                    <div class="about_heading" data-aos="fade-up">About Us</div>
-                    <p data-aos="fade-up" data-aos-duration="2500">会社名<br>
-                        HTS有限会社<br>
-                        代表取締役<br>
-                        後藤 邦明<br>
-                        設立<br>
-                        2006年3月<br>
-                        資本金<br>
-                        300万円<br>
-                        住所<br>
-                        愛知県名古屋市西区名駅2-18-5日下ビル<br>
-                        営業時間<br>
-                        平日10:00〜17:00</p>
-
-                </div>
-            </div>
-            <div class="col col-md-7 about_column2">
-                <img src="assets/images/about/about_img1.jpg" alt="" class="img-fluid about_img1" data-aos="flip-right"
-                    data-aos-duration="2000">
-            </div>
-        </div>
-    </section>
-    <!-- about ends here -->
     <!-- works starts here -->
-    <section class="works">
+    <section class="works" id="our-works">
         <div class="row p-0 m-0">
             <div class="col col-md-7">
                 <img class="works_img1 img-fluid" src="assets/images/works/works_img1.jpg" alt="" data-aos="flip-left"
@@ -204,6 +195,39 @@
             </div>
         </div>
     </section>
+    <!-- about starts here -->
+    <section class="about" id="about">
+        <div class="row p-0 m-0">
+            <div class="col-md about_column">
+                <img src="assets/images/about/about_img1.jpg" alt="" class="img-fluid about_img1_column"
+                    data-aos="flip-right" data-aos-duration="2000">
+            </div>
+            <div class="col-md">
+                <div class="about_card container">
+                    <div class="about_heading" data-aos="fade-up">Profile</div>
+                    <p data-aos="fade-up" data-aos-duration="2500">
+                        <b>会社名</b><br>
+                        HTS有限会社<br>
+                        <b>代表取締役</b><br>
+                        後藤 邦明<br>
+                        <b>設立</b><br>
+                        2006年3月<br>
+                        <b>資本金</b><br>
+                        300万円<br>
+                        <b>住所</b><br>
+                        愛知県名古屋市西区名駅2-18-5日下ビル<br>
+                        <b>営業時間</b><br>
+                        平日10:00〜17:00</p>
+
+                </div>
+            </div>
+            <div class="col col-md-7 about_column2">
+                <img src="assets/images/about/about_img1.jpg" alt="" class="img-fluid about_img1" data-aos="flip-right"
+                    data-aos-duration="2000">
+            </div>
+        </div>
+    </section>
+    <!-- about ends here -->
     <!-- Our works grid ends here -->
     <!-- Contact starts here (BEV) -->
 
@@ -213,10 +237,10 @@
 
                 <div class="col-md" data-aos="fade-right">
 
-                    <div class="contact-title">
+                    <!-- <div class="contact-title">
                         <img src="./assets/images/contact/logo_3_new.png" width="60%" height="auto" />
                         <div class="contact-addr">愛知県名古屋市西区</div>
-                    </div>
+                    </div> -->
 
                     <!-- maps section -->
                     <div class="maprouter mt-3">
@@ -226,21 +250,21 @@
                                 frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
                             </iframe> -->
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1790.5326894092498!2d136.87821449131977!3d35.177376035875014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x600376ebcc0cb987%3A0xb587e34b4720cc1!2zSmFwYW4sIOOAkjQ1MS0wMDQ1IEFpY2hpLCBOYWdveWEsIE5pc2hpIFdhcmQsIE1laWVraSwgMi1jaMWNbWXiiJIxOOKIkjUg5pel5LiL44OT44Or!5e0!3m2!1sen!2sph!4v1586778185541!5m2!1sen!2sph" 
-                            id="gmap_canvas" width="600" height="500" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
+                            id="gmap_canvas" width="600" height="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
                             </iframe>
                         </div>
                         <style>
                             .mapouter {
                                 position: relative;
                                 text-align: right;
-                                height: 500px;
+                                height: 600px;
                                 width: 600px;
                             }
 
                             .gmap_canvas {
                                 overflow: hidden;
                                 background: none !important;
-                                height: 500px;
+                                height: 600px;
                                 width: 600px;
                             }
                         </style>
@@ -252,7 +276,7 @@
 
                 <div class="col-md" data-aos="fade-left">
                     <div class="form-title">
-                        Get in touch
+                        Contact
                     </div>
 
                     <form id="contact-form ">
@@ -263,13 +287,13 @@
                         <textarea name="text_message" id="text_message" class="form-control mt-2"
                             placeholder="Message *" style="width: 100%; height: 150px;" required></textarea>
 
-                        <div class="form-check mt-2">
+                        <!-- <div class="form-check mt-2">
                             <input class="form-check-input" type="checkbox" value="" id="agreeCheck" required>
                             <label class="form-check-label" for="agreeCheck" style="font-size: 12px;">
                                 私は株式会社 <span style="color: #00AEEF; font-weight: bold;">HTS LTd.</span> の “個人情報保護に関する方針”
                                 および” 個人情報に関する取扱い”について同意します
                             </label>
-                        </div>
+                        </div> -->
 
                         <div class="g-recaptcha mt-4" data-sitekey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI">
 
@@ -305,13 +329,13 @@
 
                 <div class="col-md-2 mb-0">
                     <h6 class="footer-links">
-                        <a href="#about">Profile</a>
+                        <a href="#our-works">Our Works</a>
                     </h6>
                 </div>
-
+                
                 <div class="col-md-2 mb-0">
                     <h6 class="footer-links">
-                        <a href="#works">Our Works</a>
+                        <a href="#about">Profile</a>
                     </h6>
                 </div>
 
@@ -324,7 +348,7 @@
             </div>
         </div>
 
-        <div class="footer-copyright text-center py-3">Copyright © 2020</div>
+        <div class="footer-copyright text-center py-3">Copyright © HTS</div>
 
     </footer>
 
