added news menu in footer links

--- a/index.html
+++ b/index.html
@@ -323,6 +323,12 @@
 
                 <div class="col-md-2 mb-0">
                     <h6 class="footer-links">
+                        <a href="#news">News</a>
+                    </h6>
+                </div>
+
+                <div class="col-md-2 mb-0">
+                    <h6 class="footer-links">
                         <a href="#vision">Vision</a>
                     </h6>
                 </div>
@@ -332,7 +338,7 @@
                         <a href="#our-works">Our Works</a>
                     </h6>
                 </div>
-                
+
                 <div class="col-md-2 mb-0">
                     <h6 class="footer-links">
                         <a href="#about">Profile</a>
