--- a/index.html
+++ b/index.html
@@ -24,47 +24,46 @@
 
 </head>
 <body>
-    <section>
-        <nav class="navbar navbar-expand-lg fixed-top bg-white navbar-light py-2" data-aos="fade-down">
-            <div class="container col-10">
-                <a class="navbar-brand" href="#home"><img src="./assets/images/navigation/logo_3.png" width="250"
-                        data-aos="fade-down" data-aos-duration="3000"></a>
-                <button class=" navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-                    data-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="mainNav">
-                    <ul class="navbar-nav ml-auto" data-aos="fade-down" data-aos-duration="2000">
-                        <li class="nav-item">
-                            <a class="nav-link active px-3" href="#home">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active px-3" href="#news">News</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link px-3" href="#vision">Vision</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link px-3" href="#our-works">Our Works</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link px-3" href="#about">Profile</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link px-3" href="#contact">Contact</a>
-                        </li>
-                    </ul>
-                </div>
+    <nav class="navbar navbar-expand-lg fixed-top bg-white navbar-light py-2" data-aos="fade-down">
+        <div class="container col-10">
+            <a class="navbar-brand" href="#home"><img src="./assets/images/navigation/logo_3.png" width="250"
+                    data-aos="fade-down" data-aos-duration="3000"></a>
+            <button class=" navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                data-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="mainNav">
+                <ul class="navbar-nav ml-auto" data-aos="fade-down" data-aos-duration="2000">
+                    <li class="nav-item">
+                        <a class="nav-link active px-3" href="#home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active px-3" href="#news">News</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link px-3" href="#vision">Vision</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link px-3" href="#our-works">Our Works</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link px-3" href="#about">Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link px-3" href="#contact">Contact</a>
+                    </li>
+                </ul>
             </div>
-        </nav>
-    </section>
+        </div>
+    </nav>
+    
     <!-- main visual starts here -->
     <section id="home">
         <div class="parallax">
             <div class="container visual_content1">
                 <div class="inner">
-                    <h1 data-aos="fade-up">昨日より今日、今日より明日、</h1>
-                    <p data-aos="fade-up" data-aos-duration="1500">「殻を破り続ける会社」です！</p>
+                    <h1 data-aos="fade-up">昨日より今日、今日より明日</h1>
+                    <p data-aos="fade-up" data-aos-duration="1500">「<b>殻を破り続ける会社</b>」です！</p>
                 </div>
             </div>
         </div>
