added news content

--- a/index.html
+++ b/index.html
@@ -79,20 +79,14 @@
 
             <table id="news-table">
                 <tr data-aos="fade-up">
-                    <td id="n-title">教へひかン溶毎カオ</td>
-                    <td id="n-date">04.09.2020</td>
-                    <td id="n-excerpt">リか病激れよ置紹5晋ツチラ職電タシイ座置挑トし。。。</td>
+                    <td id="n-title">リニューアルのお知らせ</td>
+                    <td id="n-date">04.15.2020</td>
+                    <td id="n-excerpt">この度、弊社ホームページをリニューアル致しました。。。</td>
                     <td id="n-read-more"><a href="#">Read more</a></td>
                 </tr>
                 <tr data-aos="fade-up" data-aos-duration="1500">
-                    <td id="n-title">教へひかン溶毎カオ</td>
-                    <td id="n-date">04.09.2020</td>
-                    <td id="n-excerpt">リか病激れよ置紹5晋ツチラ職電タシイ座置挑トし。。。</td>
-                    <td id="n-read-more"><a href="#">Read more</a></td>
-                </tr>
-                <tr data-aos="fade-up" data-aos-duration="2000">
-                    <td id="n-title">教へひかン溶毎カオ</td>
-                    <td id="n-date">04.09.2020</td>
+                    <td id="n-title">祝14周年</td>
+                    <td id="n-date">03.15.2020</td>
                     <td id="n-excerpt">リか病激れよ置紹5晋ツチラ職電タシイ座置挑トし。。。</td>
                     <td id="n-read-more"><a href="#">Read more</a></td>
                 </tr>
