Resolving no background image on Safari IOS view test 1

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="parallax">
             <div class="container visual_content1">
                 <div class="inner">
-                    <h1 data-aos="fade-up">昨日より今日、<br>今日より明日</h1>
+                    <h1 data-aos="fade-up">昨日より今日、今日より明日</h1>
                     <p data-aos="fade-up" data-aos-duration="1500">「<b>殻を破り続ける会社</b>」です！</p>
                 </div>
             </div>
