--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport"
         content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
-    <title>HTS Ltd.</title>
+    <title>HTS Ltd|HTS有限会社</title>
+    <meta name=“description” content=“名古屋でWEBマーケティング、コンサル、ITプロダクトの海外受託開発のご紹介ならHTS にお任せください。“>
+    <meta name=“keywords” content=“HTS ホームページ オフショア“>
+    <meta name=“title” content=“HTS Ltd|HTS有限会社“>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/kevin_responsive.css">
     <link rel="stylesheet" href="assets/css/june_responsive.css">
@@ -195,6 +198,7 @@
                     <!-- maps section -->
                     <div class="maprouter mt-3">
                         <div class="gmap_canvas">
+                          
                             <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1790.5326894092498!2d136.87821449131977!3d35.177376035875014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x600376ebcc0cb987%3A0xb587e34b4720cc1!2zSmFwYW4sIOOAkjQ1MS0wMDQ1IEFpY2hpLCBOYWdveWEsIE5pc2hpIFdhcmQsIE1laWVraSwgMi1jaMWNbWXiiJIxOOKIkjUg5pel5LiL44OT44Or!5e0!3m2!1sen!2sph!4v1586778185541!5m2!1sen!2sph"
                                 id="gmap_canvas" width="600" height="600" frameborder="0" style="border:0;"
@@ -222,32 +226,34 @@
 
                 </div>
 
+                    
                 <div class="col-md" data-aos="fade-left">
                     <div class="form-title">
                         Contact
                     </div>
-
-                    <form id="contact-form ">
-                        <input type="text" name="text_name" id="text_name" class="form-control mt-5"
+                    <form id="contact-form" action="mail.php" method="post">
+                    <div class="contact__msg" style="display: none; color: white;">
+                                    <p>Your message was sent successfully.</p>
+                    </div>
+                        <input type="text" name="name" class="form-control mt-5"
                             placeholder="Name *" required />
-                        <input type="email" name="text_email" id="text_email" class="form-control mt-2"
-                            placeholder="Email address *" required />
-                        <textarea name="text_message" id="text_message" class="form-control mt-2"
+                        <input type="text" name="subject" class="form-control mt-2"
+                        placeholder="Subject *" required />
+                        <input type="email" name="email" class="form-control mt-2"
+                            placeholder="Email Address *" required />
+                        <textarea name="message" class="form-control mt-2"
                             placeholder="Message *" style="width: 100%; height: 150px;" required></textarea>
 
-                        <div class="g-recaptcha mt-4" data-sitekey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI">
+                        <div class="g-recaptcha mt-4" data-sitekey="6LcsO-sUAAAAAPqZZ19BR5fsfzYjpLmip8vpOu0h">
 
                         </div>
 
                         <div class="form-group text-center">
-                            <button class="btn" type="submit">Send</button>
+                            <button class="btn"  type="submit" name="submit">Send</button>
                         </div>
+                    </form>
                 </div>
-
-                </form>
             </div>
-
-        </div>
         </div>
     </section>
     <footer data-aos="fade-up">
