IOS issues fixed

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     <!-- end of maps section -->
 
                 </div>
-
+                
                     
                 <div class="col-md" data-aos="fade-left">
                     <div class="form-title">
@@ -229,7 +229,7 @@
                     </div>
                     <form id="contact-form" action="mail.php" method="post">
                     <div class="contact__msg" style="display: none; color: white;">
-                                    <p>Your message was sent successfully.</p>
+                        <p>Your message was sent successfully.</p>
                     </div>
                         <input type="text" name="name" class="form-control mt-5"
                             placeholder="Name *" required />
@@ -240,7 +240,7 @@
                         <textarea name="message" class="form-control mt-2"
                             placeholder="Message *" style="width: 100%; height: 150px;" required></textarea>
 
-                        <div class="g-recaptcha mt-4" data-sitekey="6LcsO-sUAAAAAPqZZ19BR5fsfzYjpLmip8vpOu0h">
+                        <div class="g-recaptcha mt-4" data-sitekey="6Le2H-wUAAAAAG8ap01pXG29b4_RqQwM4lknz2kN">
 
                         </div>
 
@@ -307,6 +307,7 @@
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
 
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://www.google.com/recaptcha/api.js?render=_reCAPTCHA_site_key"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./assets/js/main.js"></script>
